--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -51,7 +51,7 @@
 
 		<h1><b><u>Frequently Asked Questions:</u></b></h1>
 		<hr>
-
+		<div class="acc-content">
 			<button class="accordion">Q: The reservation did not display</button>
 			<div class="panel">
 				<p>
@@ -75,7 +75,7 @@
 					Because, the viewing rooms are located on different areas of the school and is managed by different areas (Basic Ed. and Higher Ed.). Therefore, the time allotment for each class in the viewing rooms would be different from each other.
 				</p>
 			</div>
-
+		</div>
 		<footer align="center">
 			<i>Copyright:</i> <br>
 			<big>Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
