--- a/pages/about.html
+++ b/pages/about.html
@@ -132,10 +132,9 @@
 			</div>
 		</nav>
 
-		<div class="about">
-			<span class="text">
-				<h1><b><u>About the site</u></b></h1>
-
+		<h1><b><u>About the site</u></b></h1>
+		<div class="body-content">
+			<span class="content">
 				<article>This project is originally conceptualized as an upgrade for the computerized library system of Sacred Heart College. Due to some constraints, the original concept hasn't materialized yet. </article>
 			</span>
 		</div>
