--- a/index.html
+++ b/index.html
@@ -143,44 +143,50 @@
 
 			<!-- Full-width images with number and caption text -->
 			<div class="mySlides fade">
-				<img src="images/slide/img01.jpg" style="width:100%;">
-				<div class="text">The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog.</div>
+				<img src="images/slide/img01.JPG" style="width:100%;">
+				<div class="text">Viewing Room 1</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img02.jpg" style="width:100%;">
-				<div class="text">Caption Two</div>
+				<img src="images/slide/img02.JPG" style="width:100%;">
+				<div class="text">Viewing Room 2</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img03.jpg" style="width:100%;">
-				<div class="text">Caption Three</div>
+				<img src="images/slide/img03.JPG" style="width:100%;">
+				<div class="text">Viewing Room 3</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img04.jpg" style="width:100%;">
-				<div class="text">Caption Three</div>
+				<img src="images/slide/img04.JPG" style="width:100%;">
+				<div class="text">Viewing Room 4</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img05.jpg" style="width:100%;">
-				<div class="text">Caption Three</div>
+				<img src="images/slide/img05.JPG" style="width:100%;">
+				<div class="text">Viewing Room 5</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img06.jpg" style="width:100%;">
-				<div class="text">Caption Three</div>
+				<img src="images/slide/img06.JPG" style="width:100%;">
+				<div class="text">Viewing Room 6</div>
+			</div>
+			
+			<div class="mySlides fade">
+				<img src="images/slide/img07.JPG" style="width:100%;">
+				<div class="text">Viewing Room 7</div>
 			</div>
 		</div>
 	<br>
 		<!-- The dots/circles -->
 		<div style="text-align:center;">
-			<span class="dot" onclick="currentSlide(1)" onhover="currentSlide(1)"></span>
-			<span class="dot" onclick="currentSlide(2)" onhover="currentSlide(2)"></span>
-			<span class="dot" onclick="currentSlide(3)" onhover="currentSlide(3)"></span>
-			<span class="dot" onclick="currentSlide(4)" onhover="currentSlide(4)"></span>
-			<span class="dot" onclick="currentSlide(5)" onhover="currentSlide(5)"></span>
-			<span class="dot" onclick="currentSlide(6)" onhover="currentSlide(6)"></span>
+			<span class="dot" onclick="currentSlide(1)"></span>
+			<span class="dot" onclick="currentSlide(2)"></span>
+			<span class="dot" onclick="currentSlide(3)"></span>
+			<span class="dot" onclick="currentSlide(4)"></span>
+			<span class="dot" onclick="currentSlide(5)"></span>
+			<span class="dot" onclick="currentSlide(6)"></span>
+			<span class="dot" onclick="currentSlide(7)"></span>
 		</div>
 
 		<!-- Javascript for Image Slider -->
