--- a/pages/about.html
+++ b/pages/about.html
@@ -148,7 +148,7 @@
 			<hr style="height: 2px; width: 95%; border-radius: 5px 5px 5px 5px; border: 1px solid black; background-color: black">
 			
 			<h2>About the Creator:</h2>
-				<img src="../images/creator_img.jpg" alt="Smile kahit mainit! :D">
+				<img src="../images/creator_img.JPG" alt="Smile kahit mainit! :D">
 			<span class="content_1">
 				<article> <br>
 					<b>Name:</b> Richard Alphege A. Ravalo, RL <br>
